# columnar_db_join

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  task_description.txt  test_main.cpp
cmake/: CompilerOptions.cmake
docs/: Presentation.key  sql_notes.txt
include/: core.h  data_source.h  dbms.h  memory_mapped_file.h
include/core/: logger.h  measurements.h  mmaped_file.h  random.h  stl_extensions.h  types.h  utils.h
scripts/: print_column.bash
src/: binary_search_join.cpp  cross_join.cpp  data_source.cpp  dbms.cpp  hash_join.cpp  memory_mapped_file.cpp  merge_join.cpp  nested_loop_join.cpp  sort.cpp
src/core/: logger.cpp  measurements.cpp  random.cpp
tests/: t-binary_search_join.cpp  t-cross_join.cpp  t-dbms.cpp  t-hash_join.cpp  t-index.cpp  t-index.h  t-merge_join.cpp
tools/: generate.cpp  tools.h
